force-app/main/default/objects/NewData__c/NewData__c.object-meta.xml
<CustomObject>
    <label>NewData</label>
    <nameField>
        <label>NewData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>