force-app/main/default/objects/NewData__c/fields/fruit__c.field-meta.xml
<CustomField>
    <fullName>fruit__c</fullName>
    <label>fruit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>