force-app/main/default/objects/NewData__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>size</label>
    <length>128</length>
    <type>Text</type>
</CustomField>